--- a/Myerp/Tpl/Dijie/xingcheng.html
+++ b/Myerp/Tpl/Dijie/xingcheng.html
@@ -38,7 +38,7 @@ function doComplete(){
       <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
         <tbody>
         
-      <php>for($i=1;$i<$djtuan[tianshu];$i++){ list($zaocan,$wucan,$wancan,$content) = explode('@_@',$xingcheng_array[$i-1]);</php>
+      <php>for($i=1;$i<=$djtuan[tianshu];$i++){ list($zaocan,$wucan,$wancan,$content) = explode('@_@',$xingcheng_array[$i-1]);</php>
           <tr>
             <th align="left" colspan="8"> <h4>日程安排：第<{$i}>天</h4>
             </th>
