--- a/Myerp/Tpl/SetSystem/index.html
+++ b/Myerp/Tpl/SetSystem/index.html
@@ -109,6 +109,8 @@
         <tr>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/Backups.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/">产品平移</a></td>
           <td width="30%">把一些部门归为一类，对某类部门进行统一操作</td>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_check.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/">部门数据平移</a></td>
+          <td width="30%">部门数据平移</td>
         </tr>
       </tbody>
     </table>
