--- a/Myerp/Tpl/SetSystem/templateList.html
+++ b/Myerp/Tpl/SetSystem/templateList.html
@@ -43,7 +43,7 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
           <th scope="col" nowrap="nowrap"> 序号</th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 分类类型 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 状态 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 锁状态 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作 </div></th>
         </tr>
       <php>$i = 0; foreach($datalist as $v){ $i++;</php>
@@ -51,9 +51,11 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
         <td scope="row" align="left" valign="top"><{$i}></td>
         <td scope="row" align="left" valign="top"><input type="text" id="title<{$v['systemID']}>" style="width:200px" value="<{$v['title']}>"></td>
         <td scope="row" align="left" valign="top"><{$v['type']}></td>
-        <td scope="row" align="left" valign="top"><{$v['status']}></td>
+        <td scope="row" align="left" valign="top"><{$v['islock']}></td>
         <td scope="row" align="left" valign="top">
         <input class="button" type="button" value="删除" onClick="deleteSystemItem(<{$v['systemID']}>,'itemlist')" />
+        <input class="button" type="button" value="锁定" onClick="lockSystemItem(<{$v['systemID']}>,'itemlist','','已锁定')" />
+        <input class="button" type="button" value="解锁" onClick="lockSystemItem(<{$v['systemID']}>,'itemlist','','未锁定')" />
         <input class="button" type="button" value="修改" onClick="save(<{$v['systemID']}>)"/>
         <input class="button" type="button" value="项目管理" onClick="addSystemDC(<{$v['systemID']}>)" />
         </td>
@@ -73,8 +75,8 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
              ];
             
             jQuery().ready(function() {
-                    <php>foreach($dat['OMlist'] as $v){</php>
-                        myautocomplete("#<{$v[systemID]}>",'<{$v[parenttype]}>');
+                    <php>foreach($systemDClist as $v){</php>
+                        myautocomplete("#<{$v[systemID]}>",'部门');
                      <php>}</php>
             });
             </script>
