--- a/Myerp/Tpl/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/Chanpin/chengbenshoujia.html
@@ -91,7 +91,7 @@ jQuery().ready(function() {
           <td colspan="6"><table cellpadding="0" cellspacing="0" width="100%">
               <tbody>
                 <tr>
-                  <td nowrap="nowrap"><strong>总成本:</strong>&nbsp;&nbsp;&nbsp; <span id="chengbenjisuan"></span></td>
+                  <td nowrap="nowrap"><strong style="color:#000">总成本:&nbsp;&nbsp;&nbsp; <span id="chengbenjisuan"></span></strong></td>
                 </tr>
               </tbody>
             </table></td>
