--- a/Myerp/Tpl/Xiaoshou/dingdanlist.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanlist.html
@@ -35,15 +35,14 @@
                 
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:300px; width:30%;"><div> 团名/时间 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:300px; width:30%;"><div> 团名/时间/操作人/收客人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 编号 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系电话 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 成人/儿童/领队 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 售价 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 提成类型 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 收客人 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 订单类型 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 新客户/老客户 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 团费 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 提成类型/订单类型 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 状态 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
                 </tr>
@@ -51,15 +50,14 @@
                 <php> $i = -1; foreach($chanpin_list as $v){ $i++;</php>
                 <tr style="cursor:pointer" height="40" class="evenListRowS1" onclick="showinfo(<{$v['chanpinID']}>)">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
-                  <td scope="row" align="left" valign="top"><{$v['title']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['title']}>/<{$v['user_name']}>/<{$v['owner']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chanpinID']}></td>
                   <td scope="row" align="left" valign="top"><{$v['lianxiren']}></td>
                   <td scope="row" align="left" valign="top"><{$v['telnum']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chengrenshu']}>/<{$v['ertongshu']}>/<{$v['lingdui_num']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['xinkehu_num']}>/<{$v['laokehu_num']}></td>
                   <td scope="row" align="left" valign="top"><{$v['jiage']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['ticheng']['description']}>%</td>
-                  <td scope="row" align="left" valign="top"><{$v['owner']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['type']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['type']}></td>
                   <td scope="row" align="left" valign="top" style="color:#4e8ccf"><{$v['status']}></td>
                   <td scope="row" align="left" valign="top"><php>echo date('m/d H:i',$v['time'])</php></td>
                 </tr>
