--- a/Myerp/Tpl/Dijie/djtuanxiangmu.html
+++ b/Myerp/Tpl/Dijie/djtuanxiangmu.html
@@ -8,13 +8,13 @@
     
     <div id="mysearchdiv" style="margin-bottom:10px;">
       <ul id="searchTabs" class="tablist " style="border-top:#4E8CCF">
-        <li style="color:#FFF; background:#4E8CCF">应收费用</li>
+        <li>应收费用</li>
       </ul>
     </div>
     <table cellpadding="0" cellspacing="0" width="100%" class="list view list_new" style="border-bottom:none; margin-bottom:20px;">
       <tbody>
         <tr height="20">
-          <th scope="col" nowrap="nowrap" style="min-width:200px;width:200px;"><div style=" background:#090; color:#FFF"> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:200px;width:200px;"><div style=" background:#4E8CCF; color:#FFF"> 标题 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 金额 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 方式 </div></th>
@@ -54,13 +54,13 @@
       
     <div id="mysearchdiv" style="margin-bottom:10px;">
       <ul id="searchTabs" class="tablist " style="border-top:#4E8CCF">
-        <li style="color:#FFF; background:#4E8CCF">应付费用</li>
+        <li>应付费用</li>
       </ul>
     </div>
     <table cellpadding="0" cellspacing="0" width="100%" class="list view list_new" style="border-bottom:none; margin-bottom:20px;">
       <tbody>
         <tr height="20">
-          <th scope="col" nowrap="nowrap" style="min-width:200px;width:200px;"><div style=" background:#090; color:#FFF"> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:200px;width:200px;"><div style=" background:#4E8CCF; color:#FFF"> 标题 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 金额 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;width:100px;"><div> 方式 </div></th>
