Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Dijie/djtuanbaozhang.html
+++ b/Myerp/Tpl/Dijie/djtuanbaozhang.html
@@ -81,12 +81,8 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
           </php>
         <input type="hidden" name="title" value="<php>echo trim($baozhang['title'])</php>"/>
         <tr>
-          <td valign="top" scope="row" style="min-width:100px; width:100px;"> 人数: </td>
+          <td valign="top" scope="row" style="min-width:100px; width:100px;"> 报账人数: </td>
           <td valign="top" scope="row" style="min-width:100px;"><input name="renshu" type="text" value="<php>echo trim($baozhang['renshu'])</php>" check="^\S+$" warning="人数不能为空,且不能含有空格"></td>
-          <td valign="top" scope="row" style="min-width:100px; width:100px;"> 接团单位: </td>
-          <td valign="top" scope="row" style="min-width:300px;"><input name="jietuandanwei" type="text" value="<php>echo trim($baozhang['datatext']['jietuandanwei'])</php>" check="^\S+$" warning="接团单位不能为空,且不能含有空格"></td>
-          <td valign="top" scope="row" style="min-width:100px; width:100px;"> 全陪: </td>
-          <td valign="top" scope="row" style="min-width:100px;"><input name="quanpei" type="text" value="<php>echo trim($baozhang['datatext']['quanpei'])</php>" check="^\S+$" warning="全陪不能为空,且不能含有空格"></td>
         </tr>
         <php>}</php>
         <php>if($baozhang['type'] == '订房'){</php>
