--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -1,10 +1,16 @@
 <tp:includeCA file="Index:showheader" />
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
-<script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
+<script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/<{$actionmethod}>/xianlu.js"></script>
 
 <div id="main">
-  <include file="Chanpin:left_kongguan" />
+
+<php>if($actionmethod == 'Chanpin'){</php>
+<include file="Chanpin:left_kongguan" />
   <div id="content" style="margin-left:170px;">
+<php>}</php>
+<php>if($actionmethod == 'Dijie'){</php>
+  <div id="content" style="margin-left:5px; padding-left:0px; border-left:none">
+<php>}</php>
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
     <include file="Index:search_xianlu" />
@@ -15,42 +21,42 @@
           <php>if($markpos == '签证'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/签证">签证</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/签证">签证</a> </li>
         <li> <a 
           <php>if($markpos == '办证'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/办证">办证</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/办证">办证</a> </li>
         <li> <a 
           <php>if($markpos == '交通'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/交通">交通</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/交通">交通</a> </li>
         <li> <a 
           <php>if($markpos == '订房'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/订房">订房</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/订房">订房</a> </li>
         <li> <a 
           <php>if($markpos == '餐饮'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/餐饮">订餐</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/餐饮">订餐</a> </li>
         <li> <a 
           <php>if($markpos == '门票'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/门票">门票</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/门票">门票</a> </li>
         <li> <a 
           <php>if($markpos == '导游'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/导游">导游</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/导游">导游</a> </li>
         <li> <a 
           <php>if($markpos == '补账'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/补账">补账</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/补账">补账</a> </li>
       </ul>
     </div>
     
@@ -78,11 +84,11 @@
         <php>if($type == '签证'|| $type == '办证'|| $type == '餐饮'|| $type == '门票'|| $type == '导游'){</php>
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 备注说明 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 操作 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
       $i = -1; foreach($chanpin_list as $vol){ $i++;
@@ -103,12 +109,12 @@
         <php>if($type == '交通'){</php>
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap"><div> 航班号 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 备注说明 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 操作 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
       $i = -1; foreach($chanpin_list as $vol){ $i++;
@@ -134,9 +140,8 @@
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap"><div> 酒店名称 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 联系电话 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 备注说明 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 操作 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
       $i = -1; foreach($chanpin_list as $vol){ $i++;
@@ -147,7 +152,6 @@
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['hotel']}></td>
-            <td scope="row" align="left" valign="top"><{$vol['datatext']['hoteltelnum']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
@@ -162,8 +166,8 @@
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 备注说明 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 操作 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
       $i = -1; foreach($chanpin_list as $vol){ $i++;
@@ -189,11 +193,18 @@
 <script>
 function dosearch(){
 	title = document.getElementById('title').value;
-	window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
+	window.location = '<{:SITE_INDEX}><{$actionmethod}>/index/title/'+title;
 }
 
 function showinfo(baozhangID){
-	window.open('<{:SITE_INDEX}>Chanpin/zituanbaozhang/baozhangID/'+baozhangID);
+<php>if($actionmethod == 'Chanpin'){</php>
+	window.open('<{:SITE_INDEX}><{$actionmethod}>/zituanbaozhang/baozhangID/'+baozhangID);
+<php>}</php>
+<php>if($actionmethod == 'Dijie'){</php>
+	window.open('<{:SITE_INDEX}><{$actionmethod}>/djtuanbaozhang/baozhangID/'+baozhangID);
+<php>}</php>
+
+	
 }
 
 </script>
@@ -295,7 +306,7 @@ function showinfo(baozhangID){
         <tr>
           <td valign="top" scope="row" style="width:80px;"> 人数: </td>
           <td valign="top" scope="row"><input name="renshu" type="text" style="width:100%" check="^\S+$" warning="人数号不能为空,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="width:80px;"> 航班号: </td>
+          <td valign="top" scope="row" style="width:80px;"> 列车航班号: </td>
           <td valign="top" scope="row"><input name="hangbanhao" type="text" style="width:100%" check="^\S+$" warning="航班号不能为空,且不能含有空格" ></td>
         </tr>
         <tr>
@@ -343,22 +354,16 @@ function showinfo(baozhangID){
           </td>
         </tr>
         <tr>
-          <td valign="top" scope="row" style="width:80px;"> 人数: </td>
-          <td valign="top" scope="row"><input name="renshu" type="text" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
-          <td valign="top" scope="row"></td>
-          <td valign="top" scope="row"></td>
-        </tr>
-        <tr>
           <td valign="top" scope="row" style="width:80px;"> 酒店名称: </td>
           <td valign="top" scope="row"><input name="hotel" type="text" style="width:100%" check="^\S+$" warning="酒店名称不能为空,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="width:80px;"> 联系电话: </td>
-          <td valign="top" scope="row"><input name="hoteltelnum" type="text" style="width:100%" check="^\S+$" warning="联系电话不能为空,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="width:80px;"> 人数: </td>
+          <td valign="top" scope="row"><input name="renshu" type="text" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
         </tr>
         <tr>
           <td valign="top" scope="row" style="width:80px;"> 订房时间: </td>
-          <td valign="top" scope="row"><input name="ordertime" type="text" style="width:100%" onfocus="WdatePicker()" check="^\S+$" warning="订房时间不能为空,且不能含有空格" ></td>
+          <td valign="top" scope="row"><input name="ordertime" type="text" style="width:100%" onfocus="WdatePicker()" ></td>
           <td valign="top" scope="row" style="width:80px;"> 结算时间: </td>
-          <td valign="top" scope="row"><input name="jiesuantime" type="text" style="width:100%" onfocus="WdatePicker()" check="^\S+$" warning="结算时间不能为空,且不能含有空格" ></td>
+          <td valign="top" scope="row"><input name="jiesuantime" type="text" style="width:100%" onfocus="WdatePicker()" ></td>
         </tr>
         <tr>
           <td valign="top" scope="row" style="width:80px;"> 备注说明: </td>
@@ -597,7 +602,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_qianzheng','resultdiv_2'))
-				ThinkAjax.sendForm('form_qianzheng','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_qianzheng','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -611,7 +616,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_banzheng','resultdiv_2'))
-				ThinkAjax.sendForm('form_banzheng','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_banzheng','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -625,7 +630,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_jipiao','resultdiv_2'))
-				ThinkAjax.sendForm('form_jipiao','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_jipiao','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -639,7 +644,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_dingfang','resultdiv_2'))
-				ThinkAjax.sendForm('form_dingfang','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_dingfang','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -653,7 +658,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_buzhang','resultdiv_2'))
-				ThinkAjax.sendForm('form_buzhang','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_buzhang','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -667,7 +672,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_jiaotong','resultdiv_2'))
-				ThinkAjax.sendForm('form_jiaotong','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_jiaotong','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -681,7 +686,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_menpiao','resultdiv_2'))
-				ThinkAjax.sendForm('form_menpiao','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_menpiao','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -695,7 +700,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_daoyou','resultdiv_2'))
-				ThinkAjax.sendForm('form_daoyou','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_daoyou','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -709,7 +714,7 @@ jQuery(document).ready(function(){
 		buttons: {
 			"确认": function() {
 				if(CheckForm('form_dingcan','resultdiv_2'))
-				ThinkAjax.sendForm('form_dingcan','<{:SITE_INDEX}>Chanpin/dopost_baozhang',save_after,'resultdiv');
+				ThinkAjax.sendForm('form_dingcan','<{:SITE_INDEX}><{$actionmethod}>/dopost_baozhang',save_after,'resultdiv');
 			},
 			"取消": function() {
 				jQuery(this).dialog("close");
@@ -767,7 +772,7 @@ jQuery(document).ready(function(){
 	
 function save_after(data,status){
 	if(status == 1){
-		window.location = '<{:SITE_INDEX}>Chanpin/danxiangfuwu/type/'+data['type'];
+		window.location = '<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu/type/'+data['type'];
 	}
 }
 
@@ -775,7 +780,7 @@ function save_after(data,status){
 function deletebaozhang(baozhangID){
 	jQuery.ajax({
 		type:	"POST",
-		url:	'<{:SITE_INDEX}>Chanpin/deleteBaozhang/chanpinID/'+baozhangID,
+		url:	'<{:SITE_INDEX}><{$actionmethod}>/deleteBaozhang/chanpinID/'+baozhangID,
 		data:	'',
 		success:function(msg){
 			ThinkAjax.myAjaxResponse(msg,'resultdiv',del_after);
