--- a/Myerp/Tpl/Index/error.html
+++ b/Myerp/Tpl/Index/error.html
@@ -61,9 +61,8 @@ h2{
 <h2>系统发生错误 </h2>
 <div>您可以选择 [ <a href="javascript:history.go(0)">重试</a> ] [ <a href="javascript:history.back()">返回</a> ] [ <a href="javascript:logout()">注销</a> ] 或者 [ <a href="<{:SITE_INDEX}>">回到首页</a> ]</div>
 <p class="title">[ 错误信息 ]</p>
-<p class="message">请联系管理员</p>
-</div>
-<div style="color:#FF3300;margin:5pt;font-family:Verdana" align="center"> ThinkPHP <sup style="color:gray;font-size:9pt">3.0</sup><span style="color:silver"> { Fast &amp; Simple OOP PHP Framework } -- [ WE CAN DO IT JUST THINK ]</span>
+<p class="message">请联系管理员：电话15640840060，QQ308715744</p>
+<p class="message">错误内容：<{$message}></p>
 </div>
 
 </body></html>
