--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -1,11 +1,6 @@
-	
-<body>
+<include file="Index:simple_header" />
 
 <a href="/index.php?s=/Forme/chanpinxianlu" target="_blank" >线路</a><br>
 <a href="/index.php?s=/Forme/chanpindijie" target="_blank" >地接</a><br>
 <a href="/index.php?s=/Forme/fillSystemAll" target="_blank" >基础数据</a><br>
-<a href="/index.php?s=/Forme/chanpindijie" target="_blank" >线路</a><br>
-<a href="/index.php?s=/Forme/chanpindijie" target="_blank" >线路</a><br>
-<a href="/index.php?s=/Forme/chanpindijie" target="_blank" >线路</a><br>
 
-</body>
